samples/_failures_safe/1761667901_af6271_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4a55ddb.c: In function ‘main’:
./samples/SAFE/__tmp_f4a55ddb.c:144:12: error: missing terminating " character
  144 |     printf("
      |            ^
./samples/SAFE/__tmp_f4a55ddb.c:144:5: error: expected expression at end of input
  144 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_f4a55ddb.c:144:5: error: expected declaration or statement at end of input
